Делаем работу над ошибками

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -34,261 +34,264 @@
     </nav>
   </header>
   <main class="main">
-    <h1 class="main__head">Каталог продукции</h1>
+    <div class="container">
+      <h1 class="main__head">Каталог продукции</h1>
 
-    <ul class="catalog">
-      <!--№1-->
-      <li class="catalog__item">
-        <a href="/page1">
-          <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус курицы" src="img/chicken-small-mobile@1x.jpg">
-        </a>
-        <a href="/page1">
-          <h2 class="catalog__head">
-            Cat Energy
-            PRO 500 г
-          </h2>
-        </a>
-        <table class="catalog-description">
-          <tr>
-            <td class="catalog-description__item">Объем</td>
-            <td class="catalog-description__item">500 г</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Вкус</td>
-            <td class="catalog-description__item">Курица</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Цена</td>
-            <td class="catalog-description__item">700 р</td>
-          </tr>
-        </table>
-        <a href="#" class="button">ЗАКАЗАТЬ</a>
-      </li>
-      <!--№2-->
-      <li class="catalog__item">
-        <a href="/page2">
-          <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус курицы" src="img/chicken-big-mobile@1x.jpg">
-        </a>
-        <a href="/page2">
-          <h2 class="catalog__head">
-            Cat Energy
-            PRO 1000 г
-          </h2>
-        </a>
-        <table class="catalog-description">
-          <tr>
-            <td class="catalog-description__item">Объем</td>
-            <td class="catalog-description__item">1000 г</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Вкус</td>
-            <td class="catalog-description__item">Курица</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Цена</td>
-            <td class="catalog-description__item">1000 р</td>
-          </tr>
-        </table>
-        <a href="#" class="button">ЗАКАЗАТЬ</a>
-      </li>
-      <!--№3-->
-      <li class="catalog__item">
-        <a href="/page3">
-          <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус рыбы" src="img/fish-small-mobile@1x.jpg">
-        </a>
-        <a href="/page3">
-          <h2 class="catalog__head">
-            Cat Energy
-            PRO 500 г
-          </h2>
-        </a>
-        <table class="catalog-description">
-          <tr>
-            <td class="catalog-description__item">Объем</td>
-            <td class="catalog-description__item">500 г</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Вкус</td>
-            <td class="catalog-description__item">Рыба</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Цена</td>
-            <td class="catalog-description__item">700 р</td>
-          </tr>
-        </table>
-        <a href="#" class="button">ЗАКАЗАТЬ</a>
-      </li>
-      <!--№4-->
-      <li class="catalog__item">
-        <a href="/page4">
-          <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус рыбы" src="img/fish-big-mobile@1x.jpg">
-        </a>
-        <a href="/page4">
-          <h2 class="catalog__head">
-            Cat Energy
-            PRO 1000 г
-          </h2>
-        </a>
-        <table class="catalog-description">
-          <tr>
-            <td class="catalog-description__item">Объем</td>
-            <td class="catalog-description__item">1000 г</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Вкус</td>
-            <td class="catalog-description__item">Курица</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Цена</td>
-            <td class="catalog-description__item">1000 р</td>
-          </tr>
-        </table>
-        <a href="#" class="button">ЗАКАЗАТЬ</a>
-      </li>
-      <!--№5-->
-      <li class="catalog__item">
-        <a href="/page5">
-          <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус гречки"
-            src="img/buckwheat-small-mobile@1x.jpg">
-        </a>
-        <a href="/page5">
-          <h2 class="catalog__head">
-            Cat Energy
-            Slim 500 г
-          </h2>
-        </a>
-        <table class="catalog-description">
-          <tr>
-            <td class="catalog-description__item">Объем</td>
-            <td class="catalog-description__item">500 г</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Вкус</td>
-            <td class="catalog-description__item">Гречка</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Цена</td>
-            <td class="catalog-description__item">400 р</td>
-          </tr>
-        </table>
-        <a href="#" class="button">ЗАКАЗАТЬ</a>
-      </li>
-      <!--№6-->
-      <li class="catalog__item">
-        <a href="/page6">
-          <img class="catalog__item-img" alt="Cat Energy Slim 1000 г вкус гречки" src="img/buckwheat-big-mobile@1x.jpg">
-        </a>
-        <a href="/page6">
-          <h2 class="catalog__head">
-            Cat Energy
-            Slim 1000 г
-          </h2>
-        </a>
-        <table class="catalog-description">
-          <tr>
-            <td class="catalog-description__item">Объем</td>
-            <td class="catalog-description__item">1000 г</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Вкус</td>
-            <td class="catalog-description__item">Гречка</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Цена</td>
-            <td class="catalog-description__item">700 р</td>
-          </tr>
-        </table>
-        <a href="#" class="button">ЗАКАЗАТЬ</a>
-      </li>
-      <!--№7-->
-      <li class="catalog__item">
-        <a href="/page7">
-          <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус риса" src="img/rice-small-mobile@1x.jpg">
-        </a>
-        <a href="/page7">
-          <h2 class="catalog__head">
-            Cat Energy
-            Slim 500 г
-          </h2>
-        </a>
-        <table class="catalog-description">
-          <tr>
-            <td class="catalog-description__item">Объем</td>
-            <td class="catalog-description__item">500 г</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Вкус</td>
-            <td class="catalog-description__item">Рис</td>
-          </tr>
-          <tr>
-            <td class="catalog-description__item">Цена</td>
-            <td class="catalog-description__item">500 р</td>
-          </tr>
-        </table>
-        <a href="#" class="button">ЗАКАЗАТЬ</a>
-      </li>
-      <li class="catalog__item more-info">
-
-        <h2 class="more-info__head">Показать еще 100500 товаров</h2>
-        <p class="more-info__part">На самом деле вкусов гораздо больше!</p>
-        <a href="/all" class="more-info__show">ПОКАЗАТЬ ВСЕ</a>
-      </li>
-    </ul>
-    <section class="add-goods">
-      <h2 class="add-goods__title">Дополнительные товары</h2>
-      <ul class="add-goods__list">
-        <li class="add-article">
-          <h3 class="add-article__title">Сахарозаменитель</h3>
-          <table class="add-article__table">
+      <ul class="catalog">
+        <!--№1-->
+        <li class="catalog__item">
+          <a href="/page1">
+            <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус курицы" src="img/chicken-small-mobile@1x.jpg">
+          </a>
+          <a href="/page1">
+            <h2 class="catalog__head">
+              Cat Energy
+              PRO 500 г
+            </h2>
+          </a>
+          <table class="catalog-description">
             <tr>
-              <td class="add-article__item">1 упаковка (100 г)</td>
-              <td class="add-article__item">200 р.</td>
+              <td class="catalog-description__item">Объем</td>
+              <td class="catalog-description__item">500 г</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Вкус</td>
+              <td class="catalog-description__item">Курица</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Цена</td>
+              <td class="catalog-description__item">700 р</td>
             </tr>
           </table>
-          <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          <a href="#" class="button">ЗАКАЗАТЬ</a>
         </li>
-
-        <li class="add-article">
-          <h3 class="add-article__title">Питьевая вода</h3>
-          <table class="add-article__table">
+        <!--№2-->
+        <li class="catalog__item">
+          <a href="/page2">
+            <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус курицы" src="img/chicken-big-mobile@1x.jpg">
+          </a>
+          <a href="/page2">
+            <h2 class="catalog__head">
+              Cat Energy
+              PRO 1000 г
+            </h2>
+          </a>
+          <table class="catalog-description">
             <tr>
-              <td class="add-article__item">5 литров</td>
-              <td class="add-article__item">50 р.</td>
+              <td class="catalog-description__item">Объем</td>
+              <td class="catalog-description__item">1000 г</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Вкус</td>
+              <td class="catalog-description__item">Курица</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Цена</td>
+              <td class="catalog-description__item">1000 р</td>
             </tr>
           </table>
-          <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          <a href="#" class="button">ЗАКАЗАТЬ</a>
         </li>
-
-        <li class="add-article">
-          <h3 class="add-article__title">Молоко</h3>
-          <table class="add-article__table">
+        <!--№3-->
+        <li class="catalog__item">
+          <a href="/page3">
+            <img class="catalog__item-img" alt="Cat Energy PRO 500 г вкус рыбы" src="img/fish-small-mobile@1x.jpg">
+          </a>
+          <a href="/page3">
+            <h2 class="catalog__head">
+              Cat Energy
+              PRO 500 г
+            </h2>
+          </a>
+          <table class="catalog-description">
             <tr>
-              <td class="add-article__item">1 литр</td>
-              <td class="add-article__item">100 р.</td>
+              <td class="catalog-description__item">Объем</td>
+              <td class="catalog-description__item">500 г</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Вкус</td>
+              <td class="catalog-description__item">Рыба</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Цена</td>
+              <td class="catalog-description__item">700 р</td>
             </tr>
           </table>
-          <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          <a href="#" class="button">ЗАКАЗАТЬ</a>
         </li>
-
-        <li class="add-article">
-          <h3 class="add-article__title">Витамины</h3>
-          <table class="add-article__table">
+        <!--№4-->
+        <li class="catalog__item">
+          <a href="/page4">
+            <img class="catalog__item-img" alt="Cat Energy PRO 1000 г вкус рыбы" src="img/fish-big-mobile@1x.jpg">
+          </a>
+          <a href="/page4">
+            <h2 class="catalog__head">
+              Cat Energy
+              PRO 1000 г
+            </h2>
+          </a>
+          <table class="catalog-description">
             <tr>
-              <td class="add-article__item">1 упаковка (30 г)</td>
-              <td class="add-article__item">300 р.</td>
+              <td class="catalog-description__item">Объем</td>
+              <td class="catalog-description__item">1000 г</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Вкус</td>
+              <td class="catalog-description__item">Курица</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Цена</td>
+              <td class="catalog-description__item">1000 р</td>
             </tr>
           </table>
-          <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          <a href="#" class="button">ЗАКАЗАТЬ</a>
+        </li>
+        <!--№5-->
+        <li class="catalog__item">
+          <a href="/page5">
+            <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус гречки"
+              src="img/buckwheat-small-mobile@1x.jpg">
+          </a>
+          <a href="/page5">
+            <h2 class="catalog__head">
+              Cat Energy
+              Slim 500 г
+            </h2>
+          </a>
+          <table class="catalog-description">
+            <tr>
+              <td class="catalog-description__item">Объем</td>
+              <td class="catalog-description__item">500 г</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Вкус</td>
+              <td class="catalog-description__item">Гречка</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Цена</td>
+              <td class="catalog-description__item">400 р</td>
+            </tr>
+          </table>
+          <a href="#" class="button">ЗАКАЗАТЬ</a>
+        </li>
+        <!--№6-->
+        <li class="catalog__item">
+          <a href="/page6">
+            <img class="catalog__item-img" alt="Cat Energy Slim 1000 г вкус гречки"
+              src="img/buckwheat-big-mobile@1x.jpg">
+          </a>
+          <a href="/page6">
+            <h2 class="catalog__head">
+              Cat Energy
+              Slim 1000 г
+            </h2>
+          </a>
+          <table class="catalog-description">
+            <tr>
+              <td class="catalog-description__item">Объем</td>
+              <td class="catalog-description__item">1000 г</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Вкус</td>
+              <td class="catalog-description__item">Гречка</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Цена</td>
+              <td class="catalog-description__item">700 р</td>
+            </tr>
+          </table>
+          <a href="#" class="button">ЗАКАЗАТЬ</a>
+        </li>
+        <!--№7-->
+        <li class="catalog__item">
+          <a href="/page7">
+            <img class="catalog__item-img" alt="Cat Energy Slim 500 г вкус риса" src="img/rice-small-mobile@1x.jpg">
+          </a>
+          <a href="/page7">
+            <h2 class="catalog__head">
+              Cat Energy
+              Slim 500 г
+            </h2>
+          </a>
+          <table class="catalog-description">
+            <tr>
+              <td class="catalog-description__item">Объем</td>
+              <td class="catalog-description__item">500 г</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Вкус</td>
+              <td class="catalog-description__item">Рис</td>
+            </tr>
+            <tr>
+              <td class="catalog-description__item">Цена</td>
+              <td class="catalog-description__item">500 р</td>
+            </tr>
+          </table>
+          <a href="#" class="button">ЗАКАЗАТЬ</a>
+        </li>
+        <li class="catalog__item more-info">
+
+          <h2 class="more-info__head">Показать еще 100500 товаров</h2>
+          <p class="more-info__part">На самом деле вкусов гораздо больше!</p>
+          <a href="/all" class="more-info__show">ПОКАЗАТЬ ВСЕ</a>
         </li>
       </ul>
-      <div class="present">
-        <a class="present__a">
-          <p class="present__text">
-            Закажите все и получите чехол для кота в подарок!
-          </p>
-        </a>
-      </div>
-    </section>
+      <section class="add-goods">
+        <h3 class="add-goods__title">Дополнительные товары</h3>
+        <ul class="add-goods__list">
+          <li class="add-article">
+            <h4 class="add-article__title">Сахарозаменитель</h4>
+            <table class="add-article__table">
+              <tr>
+                <td class="add-article__item">1 упаковка (100 г)</td>
+                <td class="add-article__item">200 р.</td>
+              </tr>
+            </table>
+            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          </li>
+
+          <li class="add-article">
+            <h4 class="add-article__title">Питьевая вода</h4>
+            <table class="add-article__table">
+              <tr>
+                <td class="add-article__item">5 литров</td>
+                <td class="add-article__item">50 р.</td>
+              </tr>
+            </table>
+            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          </li>
+
+          <li class="add-article">
+            <h4 class="add-article__title">Молоко</h4>
+            <table class="add-article__table">
+              <tr>
+                <td class="add-article__item">1 литр</td>
+                <td class="add-article__item">100 р.</td>
+              </tr>
+            </table>
+            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          </li>
+
+          <li class="add-article">
+            <h4 class="add-article__title">Витамины</h4>
+            <table class="add-article__table">
+              <tr>
+                <td class="add-article__item">1 упаковка (30 г)</td>
+                <td class="add-article__item">300 р.</td>
+              </tr>
+            </table>
+            <a href="#" class="add-article__order button">ЗАКАЗАТЬ</a>
+          </li>
+        </ul>
+        <div class="present">
+          <a class="present__a">
+            <p class="present__text">
+              Закажите все и получите чехол для кота в подарок!
+            </p>
+          </a>
+        </div>
+      </section>
+    </div>
   </main>
   <footer class="footer">
     <section class="welcome">
