--- a/source/index.html
+++ b/source/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -34,84 +34,86 @@
     </nav>
   </header>
   <main>
-    <section class="introduce">
-      <h1 class="introduce__head">Функциональное питание для котов</h1>
-      <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ? ЗАЙМИСЬ КОТОМ!</p>
-      <img class="introduce__img" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Банка с кормом">
-      <a href="form.html" class="button">ПОДОБРАТЬ ПРОГРАММУ</a>
-    </section>
-    <ul class="program-choice">
-      <li class="program-choice__item">
-        <!--Картинка-иконка-->
-        <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
-        <p class="program-choice__info">
-          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-          Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-        </p>
-        <a href="#catalog-1" class="program-choice__get">Каталог SLIM </a>
-      </li>
-      <li class="program-choice__item">
-        <!--Картинка-иконка-->
-        <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
-        <p class="program-choice__info">
-          Заработать авторитет среди дворовых котов и даже собак?
-          Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-        </p>
-        <a href="#catalog-2" class="program-choice__get">Каталог PRO </a>
-      </li>
-    </ul>
-    <section class="works">
-      <h2 class="works__head">Как это работает</h2>
-      <ul class="works__list">
-        <li class="works__item works__item--benefit">
+    <div class="container">
+      <section class="introduce">
+        <h1 class="introduce__head">Функциональное питание для котов</h1>
+        <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ? ЗАЙМИСЬ КОТОМ!</p>
+        <img class="introduce__img" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Банка с кормом">
+        <a href="form.html" class="button">ПОДОБРАТЬ ПРОГРАММУ</a>
+      </section>
+      <ul class="program-choice">
+        <li class="program-choice__item">
           <!--Картинка-иконка-->
-          <p class="works__info">
-            Функциональное питание содержит только полезные питательные вещества.
+          <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
+          <p class="program-choice__info">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
+          <a href="#catalog-1" class="program-choice__get">Каталог SLIM </a>
         </li>
-        <li class="works__item works__item--easy">
+        <li class="program-choice__item">
           <!--Картинка-иконка-->
-          <p class="works__info">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
+          <p class="program-choice__info">
+            Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-        </li>
-        <li class="works__item works__item--econom">
-          <!--Картинка-иконка-->
-          <p class="works__info">
-            Замените один-два приема обычной еды на наше функциональное питание.
-          </p>
-        </li>
-        <li class="works__item works__item--better">
-          <!--Картинка-иконка-->
-          <p class="works__info">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </p>
+          <a href="#catalog-2" class="program-choice__get">Каталог PRO </a>
         </li>
       </ul>
-    </section>
-    <section class="example">
-      <h2 class="example__title">Живой пример</h2>
-      <article class="example__text">
-        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-        Отличный результат без изнуряющих тренировок!
-        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-      </article>
-      <table class="example__features">
-        <tr class="example__bold">
-          <td>5 кг</td>
-          <td>60 дней</td>
-        </tr>
-        <tr class="example__small">
-          <td>снижение веса</td>
-          <td>затрачено времени</td>
-        </tr>
-      </table>
-      <p class="example__cost">затраты на питание:15 000 руб.</p>
-      <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232" alt="Жирный кот">
-      <button type="button" class="example__cat example__cat--was">БЫЛО</button>
-      <!--Тут будет индикатор-->
-      <button type="button" class="example__cat example__cat--is">СТАЛО</button>
-    </section>
+      <section class="works">
+        <h2 class="works__head">Как это работает</h2>
+        <ul class="works__list">
+          <li class="works__item works__item--benefit">
+            <!--Картинка-иконка-->
+            <p class="works__info">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="works__item works__item--easy">
+            <!--Картинка-иконка-->
+            <p class="works__info">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="works__item works__item--econom">
+            <!--Картинка-иконка-->
+            <p class="works__info">
+              Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="works__item works__item--better">
+            <!--Картинка-иконка-->
+            <p class="works__info">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <article class="example__text">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+          Отличный результат без изнуряющих тренировок!
+          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </article>
+        <table class="example__features">
+          <tr class="example__bold">
+            <td>5 кг</td>
+            <td>60 дней</td>
+          </tr>
+          <tr class="example__small">
+            <td>снижение веса</td>
+            <td>затрачено времени</td>
+          </tr>
+        </table>
+        <p class="example__cost">затраты на питание:15 000 руб.</p>
+        <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232" alt="Жирный кот">
+        <button type="button" class="example__cat example__cat--was">БЫЛО</button>
+        <!--Тут будет индикатор-->
+        <button type="button" class="example__cat example__cat--is">СТАЛО</button>
+      </section>
+    </div>
   </main>
   <footer class="footer">
     <section class="welcome">
