Исправляем заголовки и добавляем контейнеры

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <header class="header">
+    <div class="header__container">
     <div class="header__wrapper">
       <a class="header__logo">
         <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
@@ -32,14 +33,19 @@
         </li>
       </ul>
     </nav>
+  </div>
   </header>
   <main>
-    <div class="container">
+
       <section class="introduce">
+        <div class="introduce__container">
+          <div class="introduce__container--inner">
         <h1 class="introduce__head">Функциональное питание для котов</h1>
         <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ? ЗАЙМИСЬ КОТОМ!</p>
         <img class="introduce__img" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Банка с кормом">
         <a href="form.html" class="button">ПОДОБРАТЬ ПРОГРАММУ</a>
+      </div>
+      </div>
       </section>
       <ul class="program-choice">
         <li class="program-choice__item">
@@ -113,9 +119,10 @@
         <!--Тут будет индикатор-->
         <button type="button" class="example__cat example__cat--is">СТАЛО</button>
       </section>
-    </div>
+
   </main>
   <footer class="footer">
+    <div class="footer__container">
     <section class="welcome">
       <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
       <p class="welcome__address">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
@@ -144,6 +151,7 @@
         </a>
       </p>
     </section>
+  </div>
   </footer>
 
 </body>
