--- a/source/index.html
+++ b/source/index.html
@@ -11,147 +11,151 @@
 <body>
   <header class="header">
     <div class="header__container">
-    <div class="header__wrapper">
-      <a class="header__logo">
-        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-          alt="Здоровое питание для кошек «CAT ENERGY»">
-      </a>
-      <h2 class="visually-hidden">CAT ENERGY</h2>
-      <button type="button" class="burger">бургер</button>
-      <h2 class="visually-hidden">меню</h2>
+      <div class="header__wrapper">
+        <a class="header__logo">
+          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+            alt="Здоровое питание для кошек «CAT ENERGY»">
+        </a>
+        <h2 class="visually-hidden">CAT ENERGY</h2>
+        <button type="button" class="burger">бургер</button>
+        <h2 class="visually-hidden">меню</h2>
+      </div>
+      <nav class="header__menu">
+        <ul class="site-list">
+          <li class="site-list__item site-list__item--active">
+            <a class="site-list__link site-list__link--index">ГЛАВНАЯ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html" class="site-list__link site-list__link--index">КАТАЛОГ ПРОДУКЦИИ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html" class="site-list__link site-list__link--index">ПОДБОР ПРОГРАММЫ</a>
+          </li>
+        </ul>
+      </nav>
     </div>
-    <nav class="header__menu">
-      <ul class="site-list">
-        <li class="site-list__item site-list__item--active">
-          <a class="site-list__link site-list__link--index">ГЛАВНАЯ</a>
-        </li>
-        <li class="site-list__item">
-          <a href="catalog.html" class="site-list__link site-list__link--index">КАТАЛОГ ПРОДУКЦИИ</a>
-        </li>
-        <li class="site-list__item">
-          <a href="form.html" class="site-list__link site-list__link--index">ПОДБОР ПРОГРАММЫ</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
   </header>
   <main>
 
-      <section class="introduce">
-        <div class="introduce__container">
-          <div class="introduce__container--inner">
+    <section class="introduce">
+      <div class="introduce__container">
+
         <h1 class="introduce__head">Функциональное питание для котов</h1>
         <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ? ЗАЙМИСЬ КОТОМ!</p>
         <img class="introduce__img" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Банка с кормом">
         <a href="form.html" class="button">ПОДОБРАТЬ ПРОГРАММУ</a>
+
       </div>
-      </div>
-      </section>
-      <ul class="program-choice">
-        <li class="program-choice__item">
+    </section>
+    <ul class="program-choice">
+      <li class="program-choice__item">
+        <!--Картинка-иконка-->
+        <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
+        <p class="program-choice__info">
+          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+          Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+        </p>
+        <a href="#catalog-1" class="program-choice__get">Каталог SLIM </a>
+      </li>
+      <li class="program-choice__item">
+        <!--Картинка-иконка-->
+        <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
+        <p class="program-choice__info">
+          Заработать авторитет среди дворовых котов и даже собак?
+          Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+        </p>
+        <a href="#catalog-2" class="program-choice__get">Каталог PRO </a>
+      </li>
+    </ul>
+    <section class="works">
+      <h2 class="works__head">Как это работает</h2>
+      <ul class="works__list">
+        <li class="works__item works__item--benefit">
           <!--Картинка-иконка-->
-          <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
-          <p class="program-choice__info">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
-            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          <p class="works__info">
+            Функциональное питание содержит только полезные питательные вещества.
           </p>
-          <a href="#catalog-1" class="program-choice__get">Каталог SLIM </a>
         </li>
-        <li class="program-choice__item">
+        <li class="works__item works__item--easy">
           <!--Картинка-иконка-->
-          <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
-          <p class="program-choice__info">
-            Заработать авторитет среди дворовых котов и даже собак?
-            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          <p class="works__info">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
           </p>
-          <a href="#catalog-2" class="program-choice__get">Каталог PRO </a>
+        </li>
+        <li class="works__item works__item--econom">
+          <!--Картинка-иконка-->
+          <p class="works__info">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </p>
+        </li>
+        <li class="works__item works__item--better">
+          <!--Картинка-иконка-->
+          <p class="works__info">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </p>
         </li>
       </ul>
-      <section class="works">
-        <h2 class="works__head">Как это работает</h2>
-        <ul class="works__list">
-          <li class="works__item works__item--benefit">
-            <!--Картинка-иконка-->
-            <p class="works__info">
-              Функциональное питание содержит только полезные питательные вещества.
-            </p>
-          </li>
-          <li class="works__item works__item--easy">
-            <!--Картинка-иконка-->
-            <p class="works__info">
-              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-            </p>
-          </li>
-          <li class="works__item works__item--econom">
-            <!--Картинка-иконка-->
-            <p class="works__info">
-              Замените один-два приема обычной еды на наше функциональное питание.
-            </p>
-          </li>
-          <li class="works__item works__item--better">
-            <!--Картинка-иконка-->
-            <p class="works__info">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="example">
-        <h2 class="example__title">Живой пример</h2>
-        <article class="example__text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-          Отличный результат без изнуряющих тренировок!
-          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </article>
-        <table class="example__features">
-          <tr class="example__bold">
-            <td>5 кг</td>
-            <td>60 дней</td>
-          </tr>
-          <tr class="example__small">
-            <td>снижение веса</td>
-            <td>затрачено времени</td>
-          </tr>
-        </table>
-        <p class="example__cost">затраты на питание:15 000 руб.</p>
-        <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232" alt="Жирный кот">
-        <button type="button" class="example__cat example__cat--was">БЫЛО</button>
-        <!--Тут будет индикатор-->
-        <button type="button" class="example__cat example__cat--is">СТАЛО</button>
-      </section>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <article class="example__text">
+        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих тренировок!
+        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+      </article>
+      <table class="example__features">
+        <tr class="example__bold">
+          <td>5 кг</td>
+          <td>60 дней</td>
+        </tr>
+        <tr class="example__small">
+          <td>снижение веса</td>
+          <td>затрачено времени</td>
+        </tr>
+      </table>
+      <p class="example__cost">затраты на питание:15 000 руб.</p>
+      <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232" alt="Жирный кот">
+      <button type="button" class="example__cat example__cat--was">БЫЛО</button>
+      <!--Тут будет индикатор-->
+      <button type="button" class="example__cat example__cat--is">СТАЛО</button>
+    </section>
 
   </main>
   <footer class="footer">
-    <div class="footer__container">
     <section class="welcome">
       <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
       <p class="welcome__address">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
     <section class="footer__info">
-      <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
-      <ul class="footer__smm-list smm-list">
-        <li class="smm-list__item">
-          <a href="#">vk
-          </a>
-        </li>
-        <li class="smm-list__item">
-          <a href="#">inst
-          </a>
-        </li>
-        <li class="smm-list__item">
-          <a href="#">fb
-          </a>
-        </li>
-      </ul>
-      <p class="footer__html-academy html-academy">
-        HTML Academy
-        <a href="https://htmlacademy.ru">
-          <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
-        </a>
-      </p>
+      <div class="footer__container">
+        <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
+        <ul class="footer__smm-list smm-list">
+          <li class="smm-list__item">
+            <a href="#">vk
+            </a>
+          </li>
+          <li class="smm-list__item">
+            <a href="#">inst
+            </a>
+          </li>
+          <li class="smm-list__item">
+            <a href="#">fb
+            </a>
+          </li>
+        </ul>
+        <div class="html-academy">
+          <p class="html-academy__p">
+            HTML Academy
+
+            <a href="https://htmlacademy.ru">
+              <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
+            </a>
+          </p>
+        </div>
+      </div>
     </section>
-  </div>
+
   </footer>
 
 </body>
